first scetch of ui
db must be done by async so switching direction!

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="NetworkData"></service>
+        <service android:name="amk.services.ServNetworkData"></service>
     </application>
 
 </manifest>
